--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "mahmood114 <mahmoodalmohri@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react-slugify": "^2.0.3",
+    "slugify": "^1.5.3"
   },
   "scripts": {
     "start": "nodemon app.js"
